# AgentSystem

./: .env.local.example  .gitignore  PROJECT_CONTROL.md  README.md  TOOLS.md  batch_300.py  batch_ch10_20.py  batch_ch18_22.py  batch_ch19_22.py  batch_fast.py  batch_fast2.py  batch_write.py  debug_trace.py  e2e_test.py  e2e_test_scenarios.py  generate_novel.py  generate_wanli.py  generate_wanli2.py  plot_push.py  plot_push2.py  pyproject.toml  run_e2e_test.py  run_full_e2e_bg.sh  run_full_e2e_detached.sh  setup_and_start.sh  start.sh  start_server.sh  start_web_server.sh  stop_server.sh  task_push.sh  tasklist_asset_centered_runtime.md  tasklist_asset_invocation_runtime_refactor.md  tasklist_phase_g1_evidence_refinement.md  tasklist_phase_h.md  test_asset_routing.py  test_llm_e2e.py  test_runner.py
app/: app_installer.py  cli.py  interactive_app.py  interactive_app_workflow.py  runtime_paths.py
app/api/: main.py  (+5 more)
config/: config.local.example.yaml  config.local.yaml  model.local.example.json  model.openai.toml  model_pool.local.example.yaml  system_bootstrap.yaml
control-plane/: project-map.yaml
docs/: 50-scenario-interaction-review-2026-05-03.md  AgentSystem.md  adr-001-budget-quota-unification.md  architecture-master-v2.md  architecture-phase-f.md  architecture-phase-g.md  architecture-phase-g2.md  asset-centered-runtime-redesign.md  asset-manifest-standard.md  asset-registry-design.md  code-structure.md  config-guide.md  context-upload-policy.md  creative-mode-control-skills.md  design.md  development-constraints.md  development-log.md  e2e-test-requirements.md  (+66 more)
(+941 files in other folders)
