[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentsystem"
version = "0.1.0"
description = "App OS prototype for building and managing AI-native apps"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.8.0",
  "httpx>=0.27.0",
  "pytest>=8.3.0"
]

[tool.setuptools]
packages = ["app"]

[tool.setuptools.package-dir]
app = "app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
