[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentsystem"
version = "0.1.0"
description = "App OS prototype for building and managing AI-native apps"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.8.0",
  "httpx>=0.27.0",
  "PyYAML>=6.0.2",
  "python-multipart>=0.0.9",
  "jinja2>=3.1.0"
]

[project.scripts]
agentsystem = "app.cli:main"

[tool.setuptools]
packages = ["app"]

[tool.setuptools.package-dir]
app = "app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]


[project.optional-dependencies]
dev = [
  "pytest>=8.3.0"
]
